--- a/styles/main.css
+++ b/styles/main.css
@@ -95,46 +95,57 @@ h3 {
     width: 100px;
 }
 
-    * {
-      box-sizing: border-box;
-    }
+* {
+  box-sizing: border-box;
+}
 
-    /* Create a column layout with Flexbox */
-    .row {
-      display: flex;
-    }
+/* Create a column layout with Flexbox */
+.row {
+  display: flex;
+}
 
-    /* Left column (menu) */
-    .left {
-      flex: 20%;
-    }
+/* Left column (menu) */
+.left {
+  flex: 20%;
+}
 
-    /* Right column (page content) */
-    .right {
-      flex: 80%;
-    }
+/* Right column (page content) */
+.right {
+  flex: 80%;
+}
 
-    /* Style the navigation menu inside the left column */
-    #myMenu {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
+/* Style the navigation menu inside the left column */
+#myMenu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
 
-    #myMenu li a {
-      text-decoration: none;
-      color: blue;
-      display: block;
-      padding-bottom: 5px;
-      font-weight: 300;
-      letter-spacing: 1px;
-    }
+#myMenu li a {
+  text-decoration: none;
+  color: blue;
+  display: block;
+  padding-bottom: 5px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
 
-    #myMenu li a:hover {
-      color: #c3251d;
-      text-decoration: underline;
-    }
+#myMenu li a:hover {
+  color: #c3251d;
+  text-decoration: underline;
+}
 
-    .sub-menu {
-      padding-left: 60px;
-    }
+.sub-menu {
+  padding-left: 60px;
+}
+
+pre code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+}
+
+pre h4 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
